--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <h2>Pengalaman</h2>
             <div class="experience-container">
                 <div class="experience-item">
-                    <h3>Menempuh Pendidikan S1</h3>
-                    <p>Mahasiswa Ilmu Komputer (2023 - Sekarang)</p>
-                </div>
+                    <h3>wed development<h3/>
+                    <p>Web Developer (2023 - Sekarang)</p>
+                    </div>
                 <div class="experience-item">
                     <h3>UI/UX Designer</h3>
                     <p>Freelance (2023 - Sekarang)</p>
