--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <h2>Pengalaman</h2>
             <div class="experience-container">
                 <div class="experience-item">
-                    <h3>wed development<h3/>
-                    <p>Web Developer (2023 - Sekarang)</p>
-                    </div>
+                    <h3>Mahasiswa Ilmu Komputer</h3>
+                    <p>2023 - Sekarang</p>
+                </div>
                 <div class="experience-item">
                     <h3>UI/UX Designer</h3>
                     <p>Freelance (2023 - Sekarang)</p>
@@ -63,10 +63,11 @@
                 </div>
                 <div class="project">
                     <h3>Aplikasi Pengingat Jadwal</h3>
-                    <p>Aplikasi untuk memngingat jadwal dengan notifikasi email.</p>
+                    <p>Aplikasi untuk mengingat jadwal dengan notifikasi email.</p>
                 </div>
             </div>
         </section>
+
         <section class="contact">
             <h2>Kontak</h2>
             <form id="contact-form">
@@ -77,16 +78,17 @@
             </form>
         </section>
     </main>
-</body>
-<section id="contact">
-    <div class="container">
-        <h2>Contact Me</h2>
-        <p>Email: Muhizhar43@gmail.com</p>
-        <p>GitHub: <a href="https://github.com/Mhmdizhr43" target="_blank">https://github.com/Mhmdizhr43</a></p>
-    </div>
-</section>
 
-<footer>
-    <p>&copy; 2025 Muhammad Izhar. All Rights Reserved.</p>
-</footer>
+    <section id="contact-info">
+        <div class="container">
+            <h2>Hubungi Saya</h2>
+            <p>Email: <a href="mailto:Muhizhar43@gmail.com">Muhizhar43@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/Mhmdizhr43" target="_blank">github.com/Mhmdizhr43</a></p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Muhammad Izhar. All Rights Reserved.</p>
+    </footer>
+</body>
 </html>
