Update2 index.html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2>Pengalaman</h2>
             <div class="experience-container">
                 <div class="experience-item">
-                    <h3>Mahasiswa Ilmu Komputer</h3>
-                    <p>2023 - Sekarang</p>
+                    <h3>Web Developer</h3>
+                    <p>Web Developer(2023 - Sekarang)</p>
                 </div>
                 <div class="experience-item">
                     <h3>UI/UX Designer</h3>
