--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <div class="container">
             <h1>Muhammad Izhar</h1>
             <p>Web Developer | UI/UX Designer | Freelancer</p>
+            <h1>. . .</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#pengalaman">Pengalaman</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
             <button id="theme-toggle">🌙 Mode Gelap</button>
         </div>
     </header>
@@ -19,11 +29,15 @@
     <main>
         <section class="profile">
             <img src="images2.jpg" alt="Foto Profil" class="profile-img">
-            <p>Saya adalah seorang mahasiswa Ilmu Komputer dan pengembang web yang memiliki pengalaman dalam teknologi frontend dan backend.</p>
         </section>
-
+        <section class="about">
+            <h2>About me:</h2>
+            <div class="about">
+                <p>Halo seorang adalah seorang mahasiswa baru Ilmu Komputer dari Universitas Halu Oleo. Saya memiliki skill sebagai seorang pengembang web pemula yang memiliki pengalaman dalam teknologi frontend dan backend. Karena masih pemula saya akan terus belajar untuk mengembangkan skill saya dengan terus belajar dengan terus berlatih dengan membuat beberapa projek.</p>
+            </div>
+        </section>
         <section class="skills">
-            <h2>Keterampilan</h2>
+            <h2>Skills</h2>
             <div class="skill-container">
                 <div class="skill">
                     <p>HTML</p>
@@ -37,15 +51,39 @@
                     <p>JavaScript</p>
                     <div class="skill-bar"><div class="progress" data-width="80%"></div></div>
                 </div>
+                <div class="skill">
+                    <p>PHP</p>
+                    <div class="skill-bar"><div class="progress" data-width="70%"></div></div>
+                </div>
+                <div class="skill">
+                    <p>C++</p>
+                    <div class="skill-bar"><div class="progress" data-width="60%"></div></div>
+                </div>
+                <div class="skill">
+                    <p>Python</p>
+                    <div class="skill-bar"><div class="progress" data-width="50%"></div></div>
+                </div>
             </div>
         </section>
-
-        <section class="experience">
+        <section class="Education">
+            <h2>Education</h2>
+            <div class="experience-container">
+                <div class="experience-item">
+                    <h3>SMAN 1 Lakudo</h3>
+                    <p>MIPA (2019 - 2022)</p>
+                </div>
+                <div class="experience-item">
+                    <h3>Universitas Halu Oleo</h3>
+                    <p>Computer Sience (2023 - Sekarang)</p>
+                </div>
+            </div>
+        </section>
+        <section class="pengalaman">
             <h2>Pengalaman</h2>
             <div class="experience-container">
                 <div class="experience-item">
                     <h3>Web Developer</h3>
-                    <p>Web Developer(2023 - Sekarang)</p>
+                    <p>Web Developer (2023 - Sekarang)</p>
                 </div>
                 <div class="experience-item">
                     <h3>UI/UX Designer</h3>
@@ -67,7 +105,6 @@
                 </div>
             </div>
         </section>
-
         <section class="contact">
             <h2>Kontak</h2>
             <form id="contact-form">
@@ -78,17 +115,16 @@
             </form>
         </section>
     </main>
-
-    <section id="contact-info">
-        <div class="container">
-            <h2>Hubungi Saya</h2>
-            <p>Email: <a href="mailto:Muhizhar43@gmail.com">Muhizhar43@gmail.com</a></p>
-            <p>GitHub: <a href="https://github.com/Mhmdizhr43" target="_blank">github.com/Mhmdizhr43</a></p>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Muhammad Izhar. All Rights Reserved.</p>
-    </footer>
 </body>
+<section id="contact">
+    <div class="container">
+        <h2>Contact Me</h2>
+        <p>Email: Muhizhar43@gmail.com</p>
+        <p>GitHub: <a href="https://github.com/Mhmdizhr43" target="_blank">https://github.com/Mhmdizhr43</a></p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 Muhammad Izhar. All Rights Reserved.</p>
+</footer>
 </html>
